Se agregaron las configuraciones de tamaño maximo de archivos enviados por POST y el tamaño maximo del mensaje POST

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,1 +1,8 @@
+
 server.port = 8888
+
+# Max file size.
+spring.http.multipart.max-file-size=500Mb
+
+# Max request size.
+spring.http.multipart.max-request-size=1000Mb
