--- a/build.gradle
+++ b/build.gradle
@@ -32,9 +32,9 @@ dependencies {
     testCompile('org.springframework.boot:spring-boot-starter-test')
     // tag::jetty[]
     compile("org.springframework.boot:spring-boot-starter-web") {
-        exclude module: "spring-boot-starter-tomcat"
+        //exclude module: "spring-boot-starter-tomcat"
     }
-    compile("org.springframework.boot:spring-boot-starter-jetty")
+    //compile("org.springframework.boot:spring-boot-starter-jetty")
     // end::jetty[]
     // tag::actuator[]
     compile("org.springframework.boot:spring-boot-starter-actuator")
