--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -7,3 +7,5 @@ spring.http.multipart.max-file-size=500Mb
 # Max request size.
 spring.http.multipart.max-request-size=1000Mb
 
+# Endpoint
+org.ut.web.endpoint=filemanager
