--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -9,3 +9,5 @@ spring.http.multipart.max-request-size=1000Mb
 
 # Endpoint
 org.ut.web.endpoint=filemanager
+
+spring.application.name=Repositorio Documental
